Adding social and favicons

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Moonfish</title>
+    <meta http-equiv="Content-Language" content="en">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+    <title>Moonfish - Open Platform for Token Distribution</title>
+
+    <link rel="fluid-icon" href="<%= require('./assets/favicon_600px.png') %>" title="Moonfish">
+    <link rel="apple-touch-icon" href="<%= require('./assets/favicon_600px.png') %>">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://moonfish.one">
+    <meta property="og:site_name" content="Moonfish">
+    <meta property="og:title" content="Moonfish - Open Platform for Token Distribution">
+    <meta property="og:description" content="The goal of the Moonfish platform is to create open, secure and reliable software for doing token sales.">
+    <meta property="og:image" content="http://moonfish.one/assets/moonfish_social_media_square.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="1200">
+
+    <meta name="description" content="The goal of the Moonfish platform is to create open, secure and reliable software for doing token sales.">
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Moonfish - Open Platform for Token Distribution" />
+    <meta name="twitter:description" content="The goal of the Moonfish platform is to create open, secure and reliable software for doing token sales." />
+    <meta name="twitter:image" content="http://moonfish.one/images/moonfish_social_media_square.png" />
+
   </head>
   <body>
     <div style="height:100%;" id="root"></div>
