--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,16 @@
 
     <title>Moonfish - Open Platform for Token Distribution</title>
 
+    <link rel="shortcut icon" type="image/png" href="<%= require('./assets/favicon_600px.png') %>"/>
     <link rel="fluid-icon" href="<%= require('./assets/favicon_600px.png') %>" title="Moonfish">
     <link rel="apple-touch-icon" href="<%= require('./assets/favicon_600px.png') %>">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://moonfish.one">
+    <meta property="og:url" content="https://moonfish.one">
     <meta property="og:site_name" content="Moonfish">
     <meta property="og:title" content="Moonfish - Open Platform for Token Distribution">
     <meta property="og:description" content="The goal of the Moonfish platform is to create open, secure and reliable software for doing token sales.">
-    <meta property="og:image" content="http://moonfish.one/assets/moonfish_social_media_square.png">
+    <meta property="og:image" content="https://moonfish.one<%= require('./assets/moonfish_social_media_square.png') %>">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="1200">
@@ -25,7 +26,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Moonfish - Open Platform for Token Distribution" />
     <meta name="twitter:description" content="The goal of the Moonfish platform is to create open, secure and reliable software for doing token sales." />
-    <meta name="twitter:image" content="http://moonfish.one/images/moonfish_social_media_square.png" />
+    <meta name="twitter:image" content="https://moonfish.one<%= require('./assets/moonfish_social_media_square.png') %>" />
 
   </head>
   <body>
