Adding outline to favicon

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
     <link rel="shortcut icon" type="image/png" href="<%= require('./assets/favicon_600px.png') %>"/>
     <link rel="fluid-icon" href="<%= require('./assets/favicon_600px.png') %>" title="Moonfish">
-    <link rel="apple-touch-icon" href="<%= require('./assets/favicon_600px.png') %>">
+    <link rel="apple-touch-icon" href="<%= require('./assets/favicon_apple_600px.png') %>">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://moonfish.one">
